--- a/app/templates/article/add_article_info.html
+++ b/app/templates/article/add_article_info.html
@@ -58,14 +58,21 @@
                                     <div class="form-group">
                                         <label class="control-label col-md-1">文章类型</label>
                                         <div class="col-md-10">
-                                            <select class="form-control input-small" id="article_type">
-                                                <option value=1>原创</option>
-                                                <option value=2>解盘(币莱解盘)</option>
-                                                <option value=3>视频(币莱播报)</option>
-                                                <option value=4>音频</option>
-                                                <option value=5>PDF</option>
-                                                <option value=6>早报</option>
-                                                <option value=7>晚报</option>
+                                            <select class="form-control" id="account_type">
+                                                        <option value=0>3级图文原创</option>
+                                                        <option value=1>2级图文原创</option>
+                                                        <option value=2>3级非图文原创</option>
+                                                        <option value=3>2级非图文原创</option>
+                                            </select>
+                                        </div>
+                                    </div>
+                                    <div class="form-group">
+                                        <label class="control-label col-md-1">文章分类</label>
+                                        <div class="col-md-10">
+                                            <select class="form-control" id="category_type">
+                                                        {% for x in category_ls %}
+                                                            <option value={{ x["id"] }}>{{ x["category_name"] }}</option>
+                                                        {% endfor %}
                                             </select>
                                         </div>
                                     </div>
@@ -103,6 +110,7 @@
                 layer.msg("快讯内容都不填，你想干啥？", {time: 1000, icon: 2});
                 return false
             }
+            var category_type = $('#category_type').val()
             var article_type = $('#article_type').val()
             var formData = new FormData();
             {#formData.append("img", $("#uploadfile_input")[0].files[0]);#}
@@ -111,6 +119,7 @@
             {#formData.append('img_url', $('#base_pic').attr("class"));#}
             formData.append('article_type', article_type);
             formData.append('article_content', editor1.getData());
+            formData.append('category_type', editor1.getData());
 
             layer.confirm('是否添加？', {
                     btn: ['确认', '取消']
