--- a/app/templates/article/article_list.html
+++ b/app/templates/article/article_list.html
@@ -28,15 +28,15 @@
                             </div>
                             <div class="col-md-2">
 
-                                <button type="button" class="btn blue btn-circle" onclick='set_category()'
-                                        style="margin-left: 10px">批量设置分类
+                                <button type="button" class="btn blue btn-circle"
+                                        style="margin-left: 10px" data-toggle="modal" data-target="#myModal">批量设置分类
                                 </button>
                             </div>
-                            <div class="col-md-2">
-                                <button type="button" class="btn blue btn-circle" onclick='set_type()'
-                                        style="margin-left: 10px">批量设置类型
-                                </button>
-                            </div>
+{#                            <div class="col-md-2">#}
+{#                                <button type="button" class="btn blue btn-circle" onclick='set_type()'#}
+{#                                        style="margin-left: 10px">批量设置类型#}
+{#                                </button>#}
+{#                            </div>#}
 {#                            <div class="col-md-4">#}
 {#                                <button class="btn blue btn-circle pull-right" data-toggle="modal" data-target="#myModal">#}
 {#								文章导入#}
@@ -109,65 +109,37 @@
                                 </div>
                             </div>
                         </div>
-                    </div>
-                <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-								<div class="modal-dialog">
-									<div class="modal-content">
-										<div class="modal-header">
-											<button type="button" class="close" data-dismiss="modal" aria-hidden="true">
-												×
-											</button>
-											<h4 class="modal-title" id="myModalLabel">
-												导入文章
-											</h4>
-										</div>
-										<div class="modal-body"><!-- 在这里添加一些文本 -->
-
-											<form id="importFile" name="importFile" class="form-horizontal" method="post"
-												enctype="multipart/form-data">
-												<div>
-													<label class="control-label">请选择要导入的文件：</label>
-{#													<input id="excelFile" name="excelFile" class="file-loading" type="file" multiple accept=".xls,.xlsx">#}
-                                                    <input id="excelFile" type="file" class="file" data-show-preview="True" multiple>
-												</div>
-                                                <br>
-                                            <div class="input-group">
-													<label class="control-label">账户类型</label>
-{#													<input id="excelFile" name="excelFile" class="file-loading" type="file" multiple accept=".xls,.xlsx">#}
-                                                    <div class="input-group">
-                                                        <select class="form-control" id="account_type">
-                                                        <option value=0>3级图文原创</option>
-                                                        <option value=1>2级图文原创</option>
-                                                        <option value=2>3级非图文原创</option>
-                                                        <option value=3>2级非图文原创</option>
-                                                        </select>
-                                                    </div>
-												</div>
-                                                <div>
-													<label class="control-label">账户分类</label>
-{#													<input id="excelFile" name="excelFile" class="file-loading" type="file" multiple accept=".xls,.xlsx">#}
-                                                    <select class="form-control input-small" id="category_type">
-                                                        {% for x in category_ls %}
-                                                            <option value={{ x["id"] }}>{{ x["category_name"] }}</option>
-                                                        {% endfor %}
-                                                    </select>
-												</div>
-											</form>
-
-										</div>
-										<div class="modal-footer">
-										</div>
-									</div><!-- /.modal-content -->
-							</div><!-- /.modal -->
-							</div>
                     <input id="hidden_val" type="hidden" value="">
 
                     {% if pagination %}
                         {{ macro_pagination.pagination_widget(pagination,'new_flash.article_list') }}
                     {% endif %}
+                    </div>
+
+                <div class="modal fade" id="myModal" tabindex="-1" role="basic" aria-hidden="true">
+                    <div class="modal-dialog">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <button type="button" class="close" data-dismiss="modal" aria-hidden="true"></button>
+                                <h4 class="modal-title">批量设置分类</h4>
+                            </div>
+                            <div class="modal-body">
+                                <div><label class="control-label">账户分类</label>
+                                    <select class="form-control input-small" id="category_type">
+                                        {% for x in category_ls %}
+                                            <option value={{ x["id"] }}>{{ x["category_name"] }}</option>
+                                        {% endfor %}
+                                    </select>
+                                </div>
+                            </div>
+                            <div class="modal-footer">
+                                <button type="button" class="btn dark btn-outline" data-dismiss="modal">关闭</button>
+                                <button type="button" class="btn green" onclick="set_category()">保存</button>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
-        </div>
     </div>
     <script type="text/JavaScript">
         function invent() {
@@ -192,18 +164,26 @@
                 layer.msg("请最少选择一篇文章，再进行该操作");
                 return false
             }
-            alert(info_id_list);
+            var formData = new FormData();
+            formData.append('category_type', $("#category_type").val());
+            formData.append('info_id_list', info_id_list);
+            {#formData.append('id', {{data["id"]}});#}
             layer.confirm('是否批量设置分类？', {
                 btn: ['是', '否']
             }, function () {
                 $.ajax({
                     url: '{{ url_for('new_flash.set_category')}}',
                     type: 'post',
-                    data: JSON.stringify(info_id_list),
+                    processData: false,
+                    contentType: false,
+                    data: formData,
                     success: function (data) {
                         if (data.success == 'ok') {
-                            layser.msg("批量删除成功！", {time: 2000, icon: 1});
+                            layer.msg("批量设置成功！", {time: 2000, icon: 1});
                             window.location.reload();
+                            $("input[name='choice_checkbox']:checked").each(function () {
+                                $(this).attr("checked", false);
+                            });
                         }
                         else {
                             layer.msg("批量删除失败！", {time: 2000, icon: 5});
