--- a/app/templates/article/modify_article_manage.html
+++ b/app/templates/article/modify_article_manage.html
@@ -72,9 +72,12 @@
                                         <label class="col-md-1 control-label">文章分类</label>
                                         <div class="col-md-10">
                                             <select class="form-control input-small" id="category_type">
-                                                {% for row in category_ls %}
-                                                    <option value=1 {% if data["category_type"] == row["id"] %}
-                                                        selected {% endif %}>{{ row["category_name"] }}</option>
+                                                {% for x in category_ls %}
+                                                    {% if data["account_type"] == x["id"] %}
+                                                        <option value={{ x["id"] }} selected>{{ x["category_name"] }}</option>
+                                                    {% else %}
+                                                        <option value={{ x["id"] }}>{{ x["category_name"] }}</option>
+                                                    {% endif %}
                                                 {% endfor %}
                                             </select>
                                         </div>
